Fix distorted web interface logo

--- a/client/src/app/shared/components/sidenav/sidenav.component.scss
+++ b/client/src/app/shared/components/sidenav/sidenav.component.scss
@@ -44,7 +44,8 @@
 .os-logo-container {
     margin: auto;
     width: 230px !important;
-    height: 80px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
 }
 
